<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>ro.fmi.unibuc</groupId>
	<artifactId>licitatie-curieri</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>licitatie-curieri</name>
	<description>Proiect de grup pentru AMSS + MOPS</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>21</java.version>
		<mapstruct.version>1.6.3</mapstruct.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.flywaydb</groupId>
			<artifactId>flyway-database-postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>org.openapitools</groupId>
			<artifactId>jackson-databind-nullable</artifactId>
			<version>0.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt</artifactId>
			<version>0.9.1</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>javax.mail</groupId>
			<artifactId>javax.mail-api</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>com.twilio.sdk</groupId>
			<artifactId>twilio</artifactId>
			<version>10.6.4</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectLombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${mapstruct.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openapitools</groupId>
				<artifactId>openapi-generator-maven-plugin</artifactId>
				<version>7.10.0</version>
				<executions>
					<execution>
						<id>User OpenApi generation</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/openapi/user.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<modelNameSuffix>Dto</modelNameSuffix>
							<configOptions>
								<useResponseEntity>false</useResponseEntity>
								<interfaceOnly>true</interfaceOnly>
								<java8>true</java8>
								<dateLibrary>java8</dateLibrary>
								<useTags>true</useTags>
								<useOptional>false</useOptional>
								<unhandeledException>true</unhandeledException>
								<invokerPackage>ro.fmi.unibuc.licitatie_curieri.controller.user</invokerPackage>
								<apiPackage>ro.fmi.unibuc.licitatie_curieri.controller.user.api</apiPackage>
								<modelPackage>ro.fmi.unibuc.licitatie_curieri.controller.user.models</modelPackage>
								<useSpringBoot3>true</useSpringBoot3>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>Address OpenApi generation</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/openapi/address.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<modelNameSuffix>Dto</modelNameSuffix>
							<configOptions>
								<useResponseEntity>false</useResponseEntity>
								<interfaceOnly>true</interfaceOnly>
								<java8>true</java8>
								<dateLibrary>java8</dateLibrary>
								<useTags>true</useTags>
								<useOptional>false</useOptional>
								<unhandeledException>true</unhandeledException>
								<invokerPackage>ro.fmi.unibuc.licitatie_curieri.controller.address</invokerPackage>
								<apiPackage>ro.fmi.unibuc.licitatie_curieri.controller.address.api</apiPackage>
								<modelPackage>ro.fmi.unibuc.licitatie_curieri.controller.address.models</modelPackage>
								<useSpringBoot3>true</useSpringBoot3>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>Restaurant OpenApi generation</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/openapi/restaurant.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<modelNameSuffix>Dto</modelNameSuffix>
							<configOptions>
								<useResponseEntity>false</useResponseEntity>
								<interfaceOnly>true</interfaceOnly>
								<java8>true</java8>
								<dateLibrary>java8</dateLibrary>
								<useTags>true</useTags>
								<useOptional>false</useOptional>
								<unhandeledException>true</unhandeledException>
								<invokerPackage>ro.fmi.unibuc.licitatie_curieri.restaurant.address</invokerPackage>
								<apiPackage>ro.fmi.unibuc.licitatie_curieri.controller.restaurant.api</apiPackage>
								<modelPackage>ro.fmi.unibuc.licitatie_curieri.controller.restaurant.models</modelPackage>
								<useSpringBoot3>true</useSpringBoot3>
							</configOptions>
						</configuration>
					</execution>
					<execution>
						<id>Menu OpenApi generation</id>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<inputSpec>${project.basedir}/src/main/resources/openapi/menu.yaml</inputSpec>
							<generatorName>spring</generatorName>
							<modelNameSuffix>Dto</modelNameSuffix>
							<configOptions>
								<useResponseEntity>false</useResponseEntity>
								<interfaceOnly>true</interfaceOnly>
								<java8>true</java8>
								<dateLibrary>java8</dateLibrary>
								<useTags>true</useTags>
								<useOptional>false</useOptional>
								<unhandeledException>true</unhandeledException>
								<invokerPackage>ro.fmi.unibuc.licitatie_curieri.restaurant.menu</invokerPackage>
								<apiPackage>ro.fmi.unibuc.licitatie_curieri.controller.menu.api</apiPackage>
								<modelPackage>ro.fmi.unibuc.licitatie_curieri.controller.menu.models</modelPackage>
								<useSpringBoot3>true</useSpringBoot3>
							</configOptions>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
